--- a/client/src/static/main.css
+++ b/client/src/static/main.css
@@ -3,44 +3,7 @@ body {
     font-size: 16px;
 }
 
-a {
-    color: #00bcd4;
-    font-weight: bold;
-    text-decoration: none;
-    transition: color 0.4s;
-}
 
-a:hover {
-    color: #1976d2;
-}
-
-.text-center {
-    text-align: center;
-}
-
-.top-bar {
-    padding: 10px 15px;
-    margin-bottom: 50px;
-}
-.top-bar::after {
-    content: '';
-    display: block;
-    clear: both;
-}
-
-.top-bar-left {
-    float: left;
-    font-size: 1.5em;
-}
-
-.top-bar-right {
-    float: right;
-}
-
-.top-bar a,
-.nav a {
-    margin: 0 8px;
-}
 
 .container {
     margin: 20px 20px 20px 25%;
@@ -48,20 +11,17 @@ a:hover {
     width: 700px;
 }
 
-.card-heading {
-    padding: 16px;
+.container button:hover{
+    background: #00bcd4;
+    background-color: #1976d2;
 }
 
-.field-line, .button-line {
-    padding: 16px;
+
+.buttonClicked {
+    background-color: chartreuse;
+
 }
 
-.error-message {
-    padding: 0 16px;
-    color: tomato;
-}
-
-.success-message {
-    padding: 0 16px;
-    color: green;
+.buttonNotClicked {
+    background-color: orangered;
 }
